Bug 119118 - EDITING: Animating text 'letter by letter' or 'word by word' does not work
Summary: EDITING: Animating text 'letter by letter' or 'word by word' does not work
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
Inherited From OOo
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:6.2.0
Keywords:
Depends on:
Blocks:
 
Reported: 2018-08-06 07:54 UTC by Francesc Rambla
Modified: 2018-09-16 16:48 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments
spin animation word by word (11.48 KB, application/vnd.oasis.opendocument.presentation)
2018-08-06 22:23 UTC, Regina Henschel
Details
PowerPoint with letter by letter animated text (31.07 KB, application/vnd.openxmlformats-officedocument.presentationml.presentation)
2018-08-07 06:09 UTC, Francesc Rambla
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Francesc Rambla 2018-08-06 07:54:06 UTC
I was trying to animate a text in Impress to appear as being typed on a typewriter. I had done this in previous versions of LibreOffice and it worked right but, in the version 5.1.6.2 included in Ubuntu 16.04 it does not work anymore. It seems that the problem persists in new versions because the same happens in version 6.0.3.2 included in Ubuntu 18.04.

After adding an animation to a Text Box, if you right-click the mouse over the effect you can access to the "Effect options" dialog. 
In the bottom of the 'Effect' tab in this dialog-box, 'Text animation:' option can be found. There are three possible values in the drop-down list: 'All at once', 'Word by word' or 'Letter by letter'. If you select one of the two last, then the delay between characters can be introduced in the box below the drop-down list. It does not matter what value you enter in this box or in the drop-down list, text always appears all at once. Surprisingly, the value of the delay is expressed in percentage instead of seconds or any other time units.

I've tried to create a presentation in PowerPoint, insert the effect there, after verifying it worked right, then I opened the same presentation in Impress. The text that appeared letter by letter in PowerPoint, it appears all at once in Impress. If I have a look at the effects options dialog, the "Text animation:" option had changed to "all at once" in Impress although it was "Letter by letter" in PowerPoint.

It seems this bug is affecting several versions of LibreOffice but I have found no references to it elsewhere.
Comment 1 Julien Nabet 2018-08-06 09:00:29 UTC
Mark: noticing your commits about animation, thought you might be interested in this one.
Comment 2 Julien Nabet 2018-08-06 12:29:25 UTC
Just for information, on Win 7 with LO 6.0.6, I got letter by letter by putting 10 000% in addition to "letter by letter" option.
(BTW, increase or decrease arrow for delay doesn't work)
Comment 3 Mark Hung 2018-08-06 14:17:33 UTC
(In reply to Julien Nabet from comment #1)
> Mark: noticing your commits about animation, thought you might be interested
> in this one.

This issue should be a FILEOPEN issue since it works in Powerpoint but doesn't work when the same file reopened in LibreOffice. But the actual file format wasn't specified.
 a472d3352a61b51624aea480410789e3f547a9ca is a patch for importing PPTX format.

@Francesc:

Please upload the file you edited in PowerPoint so that others can verify it. For pptx file, it might have been fixed in the master branch.
Comment 4 Xisco Faulí 2018-08-06 14:35:27 UTC
> Please upload the file you edited in PowerPoint so that others can verify
> it. For pptx file, it might have been fixed in the master branch.

Dear Francesc Rambla,
Thank you for reporting the bug. Please attach a sample document, as this makes it easier for us to verify the bug. 
(Please note that the attachment will be public, remove any sensitive information before attaching it. 
See https://wiki.documentfoundation.org/QA/FAQ#How_can_I_eliminate_confidential_data_from_a_sample_document.3F for help on how to do so.)

I have set the bug's status to 'NEEDINFO'. Please change it back to 'UNCONFIRMED' once the requested document is provided.
Adéu
Comment 5 Regina Henschel 2018-08-06 22:23:40 UTC
Created attachment 144003 [details]
spin animation word by word

I don't think, that it is an import problem from pptx.

The attached example works in Version: 6.0.4.2 (x64)
Build ID: 9b0d9b32d5dcda91d2f1a96dc04c645c450872bf
CPU threads: 8; OS: Windows 10.0; UI render: default; 
Locale: de-DE (en_US); Calc: CL

and is broken in Version: 6.1.0.2 (x64)
Build ID: b3972dcf1284967612d5ee04fea9d15bcf0cc106
CPU threads: 8; OS: Windows 10.0; UI render: default; 
Locale: de-DE (en_US); Calc: CL
Comment 6 Mark Hung 2018-08-06 22:44:09 UTC
(In reply to Regina Henschel from comment #5)
> Created attachment 144003 [details]
> spin animation word by word
> 
> I don't think, that it is an import problem from pptx.
> 
> The attached example works in Version: 6.0.4.2 (x64)
> Build ID: 9b0d9b32d5dcda91d2f1a96dc04c645c450872bf
> CPU threads: 8; OS: Windows 10.0; UI render: default; 
> Locale: de-DE (en_US); Calc: CL
> 
> and is broken in Version: 6.1.0.2 (x64)
> Build ID: b3972dcf1284967612d5ee04fea9d15bcf0cc106
> CPU threads: 8; OS: Windows 10.0; UI render: default; 
> Locale: de-DE (en_US); Calc: CL

@Regina:
I don't think that you and Francesc are talking about the same issue.
Read comment #1 again indicate it was broken in 5.1.6.2 "in the version 5.1.6.2 included in Ubuntu 16.04 it does not work anymore. It seems that the problem persists in new versions because the same happens in version 6.0.3.2 included in Ubuntu". So let's clarify what Francesc tried to report first.
Comment 7 Francesc Rambla 2018-08-07 06:09:16 UTC
Created attachment 144005 [details]
PowerPoint with letter by letter animated text
Comment 8 Francesc Rambla 2018-08-07 06:17:05 UTC
Thank you very much for your quick responses.

Attached you may find a PPTX that works in PowerPoint but it does not in Impress but, in any case, I don't think the bug I'm reporting is related to PPTX importing because, in a presentation created from scratch in Impress, it does not work either. Maybe there are two bugs: one related to animations themselves and the other related to PPTX importing.
Comment 9 Regina Henschel 2018-08-07 11:14:17 UTC
@Mark: You'r right. Let stay on import here.

I can confirm, that the effect is always set to "All at once" on import. That is a bug. But I do not find a version, which sets it to "Letter by letter". I have tested 3.5.4.2, 4.0.1.2, 4.5.0.0, 5.1.0.1, 5.1.6.1 and 6.2.0.0. It seems to be wrong from the beginning.

The import gets "Letter by letter" correctly, if the source file has old ppt format.

I see errors in the metric field 'delay between characters', but that error exists in the odp format too. Therefore I will write a new bug report for that.
Comment 10 Regina Henschel 2018-08-07 15:16:07 UTC
I have added bug 119144 for the unsuitable UI for the setting "delay between".
Comment 11 Regina Henschel 2018-08-07 18:03:24 UTC
And the in comment #5 reported problem is now in bug 119146.
Comment 12 Commit Notification 2018-08-22 10:43:50 UTC
Mark Hung committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=dc96b95f4a2c732f678af002bf53765ba3a0a21e

tdf#119118 convert tmAbs value to second.

It will be available in 6.2.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 13 BogdanB 2018-09-16 16:48:47 UTC
Working on:
Version: 6.2.0.0.alpha0+
Build ID: e005ab5d40d358adb75a64e140d46f4bf605647d
CPU threads: 4; OS: Linux 4.15; UI render: GL; VCL: gtk2; 
TinderBox: Linux-rpm_deb-x86_64@70-TDF, Branch:master, Time: 2018-09-15_02:08:38
Locale: ro-RO (ro_RO.UTF-8); Calc: threaded