tdf#119118 convert tmAbs value to second.

setInterval() of IterateContainer actually need second instead
of percentage of the duration, we just need to convert tmAbs
in millisecond to second to make iterate interval correct.

Change-Id: I1dfc3c64187eb5b7fd8f0b6a91f41dc55466b58b